Updated complete requirements with gunicorn

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,47 @@
-flask
-PyPDF2
-pyttsx3
+blinker==1.9.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.1.8
+colorama==0.4.6
+comtypes==1.4.12
+decorator==5.2.1
+filelock==3.19.1
+Flask==3.1.2
+fsspec==2025.9.0
+gTTS==2.5.4
+idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+llvmlite==0.45.0
+MarkupSafe==3.0.2
+more-itertools==10.8.0
+moviepy==2.2.1
+mpmath==1.3.0
+networkx==3.5
+numba==0.62.0
+numpy==2.3.3
+openai-whisper==20250625
+pillow==11.3.0
+proglog==0.1.12
+PyMuPDF==1.24.10
+PyMuPDFb==1.24.10
+PyPDF2==3.0.1
+pypiwin32==223
+python-dotenv==1.1.1
+pyttsx3==2.99
+pywin32==311
+regex==2025.9.18
+requests==2.32.5
+setuptools==80.9.0
+sympy==1.14.0
+tiktoken==0.11.0
+torch==2.8.0
+torchaudio==2.8.0+cpu
+torchvision==0.23.0+cpu
+tqdm==4.67.1
+typing_extensions==4.15.0
+urllib3==2.5.0
+Werkzeug==3.1.3
+wheel==0.45.1
