--- a/requirements.txt
+++ b/requirements.txt
@@ -28,9 +28,9 @@ proglog==0.1.12
 PyMuPDF==1.24.10
 PyMuPDFb==1.24.10
 PyPDF2==3.0.1
+pypiwin32==223
 python-dotenv==1.1.1
 pyttsx3==2.99
-pywin32==311
 regex==2025.9.18
 requests==2.32.5
 setuptools==80.9.0
