--- a/requirements.txt
+++ b/requirements.txt
@@ -37,8 +37,8 @@ setuptools==80.9.0
 sympy==1.14.0
 tiktoken==0.11.0
 torch==2.8.0
-torchaudio==2.8.0+cpu
-torchvision==0.23.0+cpu
+torchaudio==2.8.0
+torchvision==0.23.0
 tqdm==4.67.1
 typing_extensions==4.15.0
 urllib3==2.5.0
